<resources>
    <string name="app_name">LoginFirebase</string>
    <string name="login">Login</string>
    <string name="no_account">Not have account? <b>Signup</b></string>
    <string name="forgot_password">I forgot my <b>password</b></string>
    <string name="name_profile"><b>Name:</b> </string>
    <string name="lastname_profile"><b>LastName:</b> </string>
    <string name="phone_number_profile"><b>PhoneNumber:</b> </string>
    <string name="email_profile"><b>Email:</b> </string>
    <string name="sex_profile"><b>Gender:</b> </string>
    <string name="birth_date_profile"><b>BirthDate:</b> </string>
    <string name="country_profile"><b>Country:</b> </string>
    <string name="province_profile"><b>Province:</b> </string>
    <string name="address_profile"><b>Address:</b> </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>